code/y.output
Terminaux inutilisés dans la grammaire

    tERROR
    tESP
    tTAB
    tPRINTF


État 9 conflits: 1 réduction/réduction


Grammaire

    0 $accept: Compilo $end

    1 Compilo: tMAIN tPO tPF Bloc
    2        | tPV

    3 Bloc: Instruction
    4     | tACCO SuiteInstructions tACCF
    5     | tPV

    6 SuiteInstructions: Instruction
    7                  | Instruction SuiteInstructions

    8 Instruction: Declaration tPV
    9            | Calcul tPV
   10            | tPV

   11 Declaration: tINT SuiteDeclarations
   12            | tCONST tINT SuiteDeclarations

   13 SuiteDeclarations: Initialisation tVIR SuiteDeclarations
   14                  | Initialisation

   15 Initialisation: tID
   16               | tID tEGAL tNB

   17 Calcul: Expr tEOL
   18       | tID tEGAL Expr tEOL

   19 Expr: Expr tADD DivMul
   20     | Expr tSOU DivMul
   21     | DivMul

   22 DivMul: DivMul tMUL Terme
   23       | DivMul tDIV Terme
   24       | Terme

   25 Terme: tPO Expr tPF
   26      | tID
   27      | tNB


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tEGAL (258) 16 18
    tPO (259) 1 25
    tPF (260) 1 25
    tSOU (261) 20
    tADD (262) 19
    tDIV (263) 23
    tMUL (264) 22
    tERROR (265)
    tMAIN (266) 1
    tACCO (267) 4
    tACCF (268) 4
    tESP (269)
    tTAB (270)
    tVIR (271) 13
    tEOL (272) 17 18
    tPV (273) 2 5 8 9 10
    tCONST (274) 12
    tINT (275) 11 12
    tPRINTF (276)
    tNB <nb> (277) 16 27
    tID <var> (278) 15 16 18 26


Non-terminaux, suivis des règles où ils apparaissent

    $accept (24)
        à gauche: 0
    Compilo (25)
        à gauche: 1 2
        à droite: 0
    Bloc (26)
        à gauche: 3 4 5
        à droite: 1
    SuiteInstructions (27)
        à gauche: 6 7
        à droite: 4 7
    Instruction (28)
        à gauche: 8 9 10
        à droite: 3 6 7
    Declaration (29)
        à gauche: 11 12
        à droite: 8
    SuiteDeclarations (30)
        à gauche: 13 14
        à droite: 11 12 13
    Initialisation (31)
        à gauche: 15 16
        à droite: 13 14
    Calcul (32)
        à gauche: 17 18
        à droite: 9
    Expr <nb> (33)
        à gauche: 19 20 21
        à droite: 17 18 19 20 25
    DivMul <nb> (34)
        à gauche: 22 23 24
        à droite: 19 20 21 22 23
    Terme <nb> (35)
        à gauche: 25 26 27
        à droite: 22 23 24


État 0

    0 $accept: . Compilo $end

    tMAIN  décalage et aller à l'état 1
    tPV    décalage et aller à l'état 2

    Compilo  aller à l'état 3


État 1

    1 Compilo: tMAIN . tPO tPF Bloc

    tPO  décalage et aller à l'état 4


État 2

    2 Compilo: tPV .

    $défaut  réduction par utilisation de la règle 2 (Compilo)


État 3

    0 $accept: Compilo . $end

    $end  décalage et aller à l'état 5


État 4

    1 Compilo: tMAIN tPO . tPF Bloc

    tPF  décalage et aller à l'état 6


État 5

    0 $accept: Compilo $end .

    $défaut  accepter


État 6

    1 Compilo: tMAIN tPO tPF . Bloc

    tPO     décalage et aller à l'état 7
    tACCO   décalage et aller à l'état 8
    tPV     décalage et aller à l'état 9
    tCONST  décalage et aller à l'état 10
    tINT    décalage et aller à l'état 11
    tNB     décalage et aller à l'état 12
    tID     décalage et aller à l'état 13

    Bloc         aller à l'état 14
    Instruction  aller à l'état 15
    Declaration  aller à l'état 16
    Calcul       aller à l'état 17
    Expr         aller à l'état 18
    DivMul       aller à l'état 19
    Terme        aller à l'état 20


État 7

   25 Terme: tPO . Expr tPF

    tPO  décalage et aller à l'état 7
    tNB  décalage et aller à l'état 12
    tID  décalage et aller à l'état 21

    Expr    aller à l'état 22
    DivMul  aller à l'état 19
    Terme   aller à l'état 20


État 8

    4 Bloc: tACCO . SuiteInstructions tACCF

    tPO     décalage et aller à l'état 7
    tPV     décalage et aller à l'état 23
    tCONST  décalage et aller à l'état 10
    tINT    décalage et aller à l'état 11
    tNB     décalage et aller à l'état 12
    tID     décalage et aller à l'état 13

    SuiteInstructions  aller à l'état 24
    Instruction        aller à l'état 25
    Declaration        aller à l'état 16
    Calcul             aller à l'état 17
    Expr               aller à l'état 18
    DivMul             aller à l'état 19
    Terme              aller à l'état 20


État 9

    5 Bloc: tPV .
   10 Instruction: tPV .

    $end      réduction par utilisation de la règle 5 (Bloc)
    $end      [réduction par utilisation de la règle 10 (Instruction)]
    $défaut  réduction par utilisation de la règle 5 (Bloc)


État 10

   12 Declaration: tCONST . tINT SuiteDeclarations

    tINT  décalage et aller à l'état 26


État 11

   11 Declaration: tINT . SuiteDeclarations

    tID  décalage et aller à l'état 27

    SuiteDeclarations  aller à l'état 28
    Initialisation     aller à l'état 29


État 12

   27 Terme: tNB .

    $défaut  réduction par utilisation de la règle 27 (Terme)


État 13

   18 Calcul: tID . tEGAL Expr tEOL
   26 Terme: tID .

    tEGAL  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 26 (Terme)


État 14

    1 Compilo: tMAIN tPO tPF Bloc .

    $défaut  réduction par utilisation de la règle 1 (Compilo)


État 15

    3 Bloc: Instruction .

    $défaut  réduction par utilisation de la règle 3 (Bloc)


État 16

    8 Instruction: Declaration . tPV

    tPV  décalage et aller à l'état 31


État 17

    9 Instruction: Calcul . tPV

    tPV  décalage et aller à l'état 32


État 18

   17 Calcul: Expr . tEOL
   19 Expr: Expr . tADD DivMul
   20     | Expr . tSOU DivMul

    tSOU  décalage et aller à l'état 33
    tADD  décalage et aller à l'état 34
    tEOL  décalage et aller à l'état 35


État 19

   21 Expr: DivMul .
   22 DivMul: DivMul . tMUL Terme
   23       | DivMul . tDIV Terme

    tDIV  décalage et aller à l'état 36
    tMUL  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 21 (Expr)


État 20

   24 DivMul: Terme .

    $défaut  réduction par utilisation de la règle 24 (DivMul)


État 21

   26 Terme: tID .

    $défaut  réduction par utilisation de la règle 26 (Terme)


État 22

   19 Expr: Expr . tADD DivMul
   20     | Expr . tSOU DivMul
   25 Terme: tPO Expr . tPF

    tPF   décalage et aller à l'état 38
    tSOU  décalage et aller à l'état 33
    tADD  décalage et aller à l'état 34


État 23

   10 Instruction: tPV .

    $défaut  réduction par utilisation de la règle 10 (Instruction)


État 24

    4 Bloc: tACCO SuiteInstructions . tACCF

    tACCF  décalage et aller à l'état 39


État 25

    6 SuiteInstructions: Instruction .
    7                  | Instruction . SuiteInstructions

    tPO     décalage et aller à l'état 7
    tPV     décalage et aller à l'état 23
    tCONST  décalage et aller à l'état 10
    tINT    décalage et aller à l'état 11
    tNB     décalage et aller à l'état 12
    tID     décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 6 (SuiteInstructions)

    SuiteInstructions  aller à l'état 40
    Instruction        aller à l'état 25
    Declaration        aller à l'état 16
    Calcul             aller à l'état 17
    Expr               aller à l'état 18
    DivMul             aller à l'état 19
    Terme              aller à l'état 20


État 26

   12 Declaration: tCONST tINT . SuiteDeclarations

    tID  décalage et aller à l'état 27

    SuiteDeclarations  aller à l'état 41
    Initialisation     aller à l'état 29


État 27

   15 Initialisation: tID .
   16               | tID . tEGAL tNB

    tEGAL  décalage et aller à l'état 42

    $défaut  réduction par utilisation de la règle 15 (Initialisation)


État 28

   11 Declaration: tINT SuiteDeclarations .

    $défaut  réduction par utilisation de la règle 11 (Declaration)


État 29

   13 SuiteDeclarations: Initialisation . tVIR SuiteDeclarations
   14                  | Initialisation .

    tVIR  décalage et aller à l'état 43

    $défaut  réduction par utilisation de la règle 14 (SuiteDeclarations)


État 30

   18 Calcul: tID tEGAL . Expr tEOL

    tPO  décalage et aller à l'état 7
    tNB  décalage et aller à l'état 12
    tID  décalage et aller à l'état 21

    Expr    aller à l'état 44
    DivMul  aller à l'état 19
    Terme   aller à l'état 20


État 31

    8 Instruction: Declaration tPV .

    $défaut  réduction par utilisation de la règle 8 (Instruction)


État 32

    9 Instruction: Calcul tPV .

    $défaut  réduction par utilisation de la règle 9 (Instruction)


État 33

   20 Expr: Expr tSOU . DivMul

    tPO  décalage et aller à l'état 7
    tNB  décalage et aller à l'état 12
    tID  décalage et aller à l'état 21

    DivMul  aller à l'état 45
    Terme   aller à l'état 20


État 34

   19 Expr: Expr tADD . DivMul

    tPO  décalage et aller à l'état 7
    tNB  décalage et aller à l'état 12
    tID  décalage et aller à l'état 21

    DivMul  aller à l'état 46
    Terme   aller à l'état 20


État 35

   17 Calcul: Expr tEOL .

    $défaut  réduction par utilisation de la règle 17 (Calcul)


État 36

   23 DivMul: DivMul tDIV . Terme

    tPO  décalage et aller à l'état 7
    tNB  décalage et aller à l'état 12
    tID  décalage et aller à l'état 21

    Terme  aller à l'état 47


État 37

   22 DivMul: DivMul tMUL . Terme

    tPO  décalage et aller à l'état 7
    tNB  décalage et aller à l'état 12
    tID  décalage et aller à l'état 21

    Terme  aller à l'état 48


État 38

   25 Terme: tPO Expr tPF .

    $défaut  réduction par utilisation de la règle 25 (Terme)


État 39

    4 Bloc: tACCO SuiteInstructions tACCF .

    $défaut  réduction par utilisation de la règle 4 (Bloc)


État 40

    7 SuiteInstructions: Instruction SuiteInstructions .

    $défaut  réduction par utilisation de la règle 7 (SuiteInstructions)


État 41

   12 Declaration: tCONST tINT SuiteDeclarations .

    $défaut  réduction par utilisation de la règle 12 (Declaration)


État 42

   16 Initialisation: tID tEGAL . tNB

    tNB  décalage et aller à l'état 49


État 43

   13 SuiteDeclarations: Initialisation tVIR . SuiteDeclarations

    tID  décalage et aller à l'état 27

    SuiteDeclarations  aller à l'état 50
    Initialisation     aller à l'état 29


État 44

   18 Calcul: tID tEGAL Expr . tEOL
   19 Expr: Expr . tADD DivMul
   20     | Expr . tSOU DivMul

    tSOU  décalage et aller à l'état 33
    tADD  décalage et aller à l'état 34
    tEOL  décalage et aller à l'état 51


État 45

   20 Expr: Expr tSOU DivMul .
   22 DivMul: DivMul . tMUL Terme
   23       | DivMul . tDIV Terme

    tDIV  décalage et aller à l'état 36
    tMUL  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 20 (Expr)


État 46

   19 Expr: Expr tADD DivMul .
   22 DivMul: DivMul . tMUL Terme
   23       | DivMul . tDIV Terme

    tDIV  décalage et aller à l'état 36
    tMUL  décalage et aller à l'état 37

    $défaut  réduction par utilisation de la règle 19 (Expr)


État 47

   23 DivMul: DivMul tDIV Terme .

    $défaut  réduction par utilisation de la règle 23 (DivMul)


État 48

   22 DivMul: DivMul tMUL Terme .

    $défaut  réduction par utilisation de la règle 22 (DivMul)


État 49

   16 Initialisation: tID tEGAL tNB .

    $défaut  réduction par utilisation de la règle 16 (Initialisation)


État 50

   13 SuiteDeclarations: Initialisation tVIR SuiteDeclarations .

    $défaut  réduction par utilisation de la règle 13 (SuiteDeclarations)


État 51

   18 Calcul: tID tEGAL Expr tEOL .

    $défaut  réduction par utilisation de la règle 18 (Calcul)
